# mojiman

./: Cargo.toml  README.md
src/: json.rs  lib.rs  main.rs
src/json/: indexjson.rs
