[package]
name = "mojiman"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.3"
image = "0.23.14"
imagesize = "0.9.0"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
confy = "0.4.0"
